Added more comments to code, improved quiz mark detection accuracy, made code cross platform